update git config

--- a/git/git.config
+++ b/git/git.config
@@ -1,3 +1,8 @@
+[user]
+    name = Your Name
+    email = you@example.com
+[core]
+    excludesfile = ~/.gitignore_global
 [diff]
         tool = meld
 [core]
@@ -5,7 +10,6 @@
         whitespace = fix,-indent-with-non-tab,trailing-space,cr-at-eol
 [interactive]
     diffFilter = diff-so-fancy --patch
-
 [color]
         ui = auto
 [color "branch"]
@@ -38,8 +42,11 @@
     la = log --tags --name-status --all --graph --decorate
     lr = log --tags --name-status --graph --decorate --remotes
     lra = log --all --tags --name-status --graph --decorate --remotes
-    edit = !$EDITOR $(git status -uno --porcelain -s | awk '$1 ~ /^M|A|U/ {print $2}' )
+    edit = !vim $(git status -uno --porcelain -s | awk '$1 ~ /^M|A|U/ {print $2}')
     su = submodule update --init --recursive
     diffmain = !$EDITOR $(git diff --name-only main)
 [merge]
         tool = meld
+[pager]
+	branch = false
+	checkout = false
